syntax = "proto3";

package protos;
option go_package = "github.com/seoyhaein/datablock/protos";

import "fileblock.proto";

message DataBlockData {
  repeated FileBlockData blocks = 1;
}